--- a/Vision/MainWindow.xaml
+++ b/Vision/MainWindow.xaml
@@ -5,31 +5,71 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vision"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1080" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" FontSize="20">
-    <Grid Margin="0,0,0,0">
-        <Grid Width="500" Height="300" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Grid Height="55" VerticalAlignment="Top" Margin="70,20,70,0">
-                <Button Content="load" Name="LoadButton" Height="45" Width="110" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,130,0"/>
-                <Button Content="open" Name="OpenButton" Width="116" HorizontalAlignment="Left" Margin="-36,10,0,0"/>
-                <Button Content="restore" x:Name="RestoreButton" Height="45" Width="97" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,-12,0"/>
-            </Grid>
-            <Grid Margin="0,92,0,166">
-                <TextBox Name="FilePathBox" Height="30" FontSize="20" Margin="35,2,160,10" Text="FilePath"/>
-                <TextBox Name="StartSimbol" Height="30" FontSize="20" Margin="372,2,56,10"/>
-                <TextBox Name="LeftABC" Height="30" FontSize="20" Margin="35,61,291,-49"/>
-                <TextBox Name="RigthABC" Height="30" FontSize="20" Margin="270,61,56,-49"/>
-            </Grid>
-        </Grid>
-        <Grid Margin="36,204,864,21">
-            <RichTextBox Name="LeftRule"/>
-        </Grid>
-        <Grid Margin="269,157,631,21">
-            <RichTextBox Name="RightRule" Margin="0,46,0,0"/>
-        </Grid>
-        <Grid Width="570" Height="300" HorizontalAlignment="Right" VerticalAlignment="Top">
-            <Button Name="CheckButton" Content="check" Margin="206,93,78,149"/>
-            <TextBox Name="StringBox" Height="30" FontSize="20" Margin="206,38,78,232"/>
-            <RichTextBox Name="AnsverBox" Margin="206,198,78,0"/>
-        </Grid>
+        Title="MainWindow" Height="626.25" Width="972.5" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" FontSize="20">
+    <Grid Margin="0,0,4,0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}">
+        <Button Content="Загрузить" Name="LoadButton" Height="60" Width="140" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,30,540,0" Background="#FFF1C06A"/>
+        <Button Content="Открыть" Name="OpenButton" Width="140" HorizontalAlignment="Right" Margin="0,30,705,507" Background="#FF40FB7B" Height="60"/>
+        <Button Content="Обновить" x:Name="RestoreButton" Height="60" Width="140" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,30,373,0" Background="#FFF0F058"/>
+        <TextBox Name="FilePathBox" Height="30" FontSize="20" Margin="117,141,530,426" Text="FilePath"/>
+        <TextBox Name="StartSimbol" Height="30" FontSize="20" Margin="70,22,358,19"/>
+        <TextBox Name="LeftABC" Height="30" FontSize="20" Margin="70,110,0,-69" HorizontalAlignment="Left" Width="225" RenderTransformOrigin="0.5,0.5">
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.575"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBox Name="RigthABC" Height="30" FontSize="20" Margin="489,338,248,229" Width="225"/>
+        <Label x:Name="label3" Content="Терминальные &#xD;&#xA;символы" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="758,288,0,0" Width="184" Height="61"/>
+        <Label x:Name="label6" Content="Правила вывода" HorizontalAlignment="Left" Margin="81,227,0,0" VerticalAlignment="Top"/>
+        <RichTextBox Name="LeftRule" Margin="117,425,793,-130" RenderTransformOrigin="0.5,0.5" IsUndoEnabled="True" Block.LineHeight="6">
+            <RichTextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.5"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </RichTextBox.RenderTransform>
+        </RichTextBox>
+        <RichTextBox Name="RightRule" Margin="362,427,348,-35" RenderTransformOrigin="0.5,0.5" Block.LineHeight="6">
+            <RichTextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.306"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </RichTextBox.RenderTransform>
+        </RichTextBox>
+        <Button Name="CheckButton" Content="Проверить слово" Margin="988,75,-148,338" Background="#FFD879D8"/>
+        <TextBox Name="StringBox" FontSize="20" Margin="272,230,72,337" Height="30"/>
+        <RichTextBox Name="AnsverBox" Margin="657,387,80,-50" Width="225" RenderTransformOrigin="0.5,0.5">
+            <RichTextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0.814"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="3.111"/>
+                </TransformGroup>
+            </RichTextBox.RenderTransform>
+        </RichTextBox>
+        <Label x:Name="label2" Content="Нетерминальные &#xD;&#xA;символы" HorizontalAlignment="Left" Margin="-223,112,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Путь к файлу" HorizontalAlignment="Left" Margin="115,96,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="Стартовый нетерминал" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="117,176,0,0"/>
+        <Label x:Name="label4" Content="(каждый символ слова через запятую)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="614,68,0,0" FontSize="18"/>
+        <Label x:Name="label5" Content="Введите слово" HorizontalAlignment="Left" Margin="621,28,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="54" Width="169">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-0.429"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
     </Grid>
 </Window>
